# legictk

./: pyproject.toml  readme.md
legictk/: legic.py  legictk-bin2yaml  legictk-deobfuscate  legictk-trace-ops  legictk-yaml2bin  printutils.py
src/legictk/: bin2yaml.py  bitutils.py  deobfuscate.py  legic.py  trace.py  trace_ops.py  yaml2bin.py
